fixed spacing, improved responsiveness

--- a/assets/css/input.scss
+++ b/assets/css/input.scss
@@ -23,6 +23,7 @@ $almost-black: hsl(0, 0%, 8%);
 
 body {
     width: 100vw;
+    min-height: 100vh;
     background-color: $almost-white;
 }
 .gray-bg::before {
@@ -118,6 +119,8 @@ header {
 //main
 picture img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 .text {
     margin: 3rem 1rem;
@@ -146,8 +149,9 @@ footer {
     text-align: center;
 }
 
-@media (min-width: 900px) {
+@media (min-width: 950px) {
     header {
+        width: 100vw;
         padding: 2rem;
         justify-content: start;
         gap: 3rem;
@@ -155,11 +159,15 @@ footer {
     .btn-menu {
         display: none;
     }
+    .menu-container {
+        width: 100%;
+    }
     .nav {
+        width: 100%;
         height: 100%;
         position: relative;
         padding: 0;
-        @include flex(row, space-between, center, 15rem);
+        @include flex(row, space-between, center);
 
         background-color: transparent;
 
@@ -187,7 +195,8 @@ footer {
         font-weight: bold;
     }
     main {
-        margin: 0 8rem 5rem;
+        height: 80vh;
+        margin: 0 2rem;
         @include flex(row-reverse, center, center, 10%);
 
         picture {
@@ -208,7 +217,7 @@ footer {
         text-align: left;
 
         h1 {
-            font-size: 4rem;
+            font-size: 3rem;
         }
         p {
             padding-right: 4rem;
@@ -222,5 +231,18 @@ footer {
     }
     .clients {
         width: 100%;
+        position: relative;
+        bottom: 0;
+    }
+}
+
+@media (min-width: 1150px) {
+    main {
+        margin: 0 8rem 5rem;
+    }
+    .text {
+        h1 {
+            font-size: 4rem;
+        }
     }
 }
