--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -10,6 +10,7 @@
 
 body {
   width: 100vw;
+  min-height: 100vh;
   background-color: hsl(0, 0%, 98%);
 }
 
@@ -120,6 +121,8 @@ header {
 
 picture img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .text {
@@ -157,8 +160,9 @@ footer {
   text-align: center;
 }
 
-@media (min-width: 900px) {
+@media (min-width: 950px) {
   header {
+    width: 100vw;
     padding: 2rem;
     justify-content: start;
     gap: 3rem;
@@ -166,7 +170,11 @@ footer {
   .btn-menu {
     display: none;
   }
+  .menu-container {
+    width: 100%;
+  }
   .nav {
+    width: 100%;
     height: 100%;
     position: relative;
     padding: 0;
@@ -174,7 +182,7 @@ footer {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    gap: 15rem;
+    gap: 0;
     background-color: transparent;
   }
   .nav ul:not(.submenu) {
@@ -203,7 +211,8 @@ footer {
     font-weight: bold;
   }
   main {
-    margin: 0 8rem 5rem;
+    height: 80vh;
+    margin: 0 2rem;
     display: flex;
     flex-direction: row-reverse;
     justify-content: center;
@@ -231,7 +240,7 @@ footer {
     text-align: left;
   }
   .text h1 {
-    font-size: 4rem;
+    font-size: 3rem;
   }
   .text p {
     padding-right: 4rem;
@@ -244,6 +253,16 @@ footer {
   }
   .clients {
     width: 100%;
+    position: relative;
+    bottom: 0;
+  }
+}
+@media (min-width: 1150px) {
+  main {
+    margin: 0 8rem 5rem;
+  }
+  .text h1 {
+    font-size: 4rem;
   }
 }
 
